# brmj

./: .gitignore  .nojekyll  LICENSE.txt  README.md  index.html  pyproject.toml  search.json
docs/: _quarto.yml  index.qmd
src/brmj/: __about__.py  __init__.py  init.py
tests/: __init__.py
