[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brmj"
dynamic = ["version"]
description = "Bayesian Regression Models using Julia (like brms, but with Julia)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nikolas Siccha", email = "nikolassiccha@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "juliapkg",
    "JuliaCall",
    "pandas"
]

[project.urls]
Documentation = "https://github.com/nsiccha/brmj#readme"
Issues = "https://github.com/nsiccha/brmj/issues"
Source = "https://github.com/nsiccha/brmj"

[tool.hatch.version]
path = "src/brmj/__about__.py"

[tool.hatch.envs.docs]
extra-dependencies = [
    "jupyter",
    "jupyter-cache",
    "seaborn"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/brmj tests}"

[tool.coverage.run]
source_pkgs = ["brmj", "tests"]
branch = true
parallel = true
omit = [
  "src/brmj/__about__.py",
]

[tool.coverage.paths]
brmj = ["src/brmj", "*/brmj/src/brmj"]
tests = ["tests", "*/brmj/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
